hphp/test/zend/good/Zend/tests/jump06.php.expectf

Fatal error: 'goto' to undefined label 'L1' in %s/jump06.php on line 1
